--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <ul>
                 <li>
                     <svg>
-                        <use></use>
+                        <use href="./images/icons.svg#phone"></use>
                     </svg>
                     <span>+63906 489 1148 / +63999 985 6634</span>
                 </li>
                 <li>
                     <svg>
-                        <use></use>
+                        <use href="./images/icons.svg#envelope"></use>
                     </svg>
                     <span>nicocbnora@gmail.com </span>
                 </li>
                 <li>
                     <svg>
-                        <use></use>
+                        <use href="./images/icons.svg#placeholder"></use>
                     </svg>
                     <span>Tuguegarao City, Cagayan, Philippines</span>
                 </li>
@@ -54,7 +54,7 @@
                </li>
                <li>
                     <svg>
-                        <use href="./images/icons.svg#linkein"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                     </svg> 
                 </li>  
             </ul>
