--- a/index.html
+++ b/index.html
@@ -3,103 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
 </head>
 <body>
-    <header>
-        <div>
-            <img src="" alt="Profile Picture">
-            <span>Web Developer</span>
-        </div>
-        <div>
-            <p>Personal Details</p>
-            <ul>
-                <li>
-                    <svg>
-                        <use href="./images/icons.svg#phone"></use>
-                    </svg>
-                    <span>+63906 489 1148 / +63999 985 6634</span>
-                </li>
-                <li>
-                    <svg>
-                        <use href="./images/icons.svg#envelope"></use>
-                    </svg>
-                    <span>nicocbnora@gmail.com </span>
-                </li>
-                <li>
-                    <svg>
-                        <use href="./images/icons.svg#placeholder"></use>
-                    </svg>
-                    <span>Tuguegarao City, Cagayan, Philippines</span>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <p>Follow me @</p>
-            <ul>
-               <li>
-                    <svg>
-                        <use href="./images/icons.svg#facebook"></use>
-                    </svg> 
-               </li>
-               <li>
-                    <svg>
-                        <use href="./images/icons.svg#instagram"></use>
-                    </svg> 
-                </li>
-                <li>
-                    <svg>
-                        <use href="./images/icons.svg#twitter"></use>
-                    </svg> 
-               </li>
-               <li>
-                    <svg>
-                        <use href="./images/icons.svg#linkedin"></use>
-                    </svg> 
-                </li>  
-            </ul>
-        </div>
-    </header>
     <main>
-        <section>
-            <h1>Nicholai Christopher B. Nora</h1>
-            <p>enthusiastic about learning and contributing to innovative web projects. Eager to apply my foundational knowledge in HTML, CSS, and JavaScript, along with my passion for continuous learning, to grow and excel in a dynamic development environment.</p>
-        </section>
-        <section>
-            <h3>Skills</h3>
-            <ul>
-                <li>
-                    <p>Front-end Development</p>        
-                </li>
-                <li>
-                    <p>Back-end Development</p>        
-                </li>
-                <li>
-                    <p>Search Engine Optimization</p>        
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h3>Educational Background</h3>
-            <ul>
-                <li>
-                    <h4>Bachelor of Science in Electronics and Communications Engineering</h4>
-                    <p>University of Saint Louis Tuguegarao</p>
-                    <span>2011 - 2016</span>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <h4>Bachelor of Science in Electronics and Communications Engineering</h4>
-                    <p>University of Saint Louis Tuguegarao</p>
-                    <span>2011 - 2016</span>
-                </li>
-            </ul>
+        <section class="main-section">
+            <div class="main-container">
+                <div class="logo-heading-container">
+                    <div class="logo-container">
+                        <img alt="Facebook Logo" src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg
+                        " class="logo">
+                    </div>
+                    <h2 class="heading">Facebook helps you connect and share with the people in your life.</h2>
+                </div>
+                <div class="credential-container">
+                    <div class="login-container">
+                        <div class="form-container">
+                            <form class="form">
+                                <div class="input-container">
+                                    <input>
+                                    <input>
+                                </div>
+                                <div class="button-container">
+                                    <button></button>
+                                </div>
+                                <div><a>Forgotten Password</a></div>
+                                <div><a>Create new Account</a></div>
+                            </form>
+                        </div>
+                        <div>
+                            <a>Create a Page</a> for a celebrity, brand or business.
+                        </div>    
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
-</html>
 </html>
