--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
                         <img alt="Facebook Logo" src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg
                         " class="logo">
                     </div>
-                    <h2 class="heading">Facebook helps you connect and share with the people in your life.</h2>
+                    <h2 class="heading">Connect with friends and the world around you on Facebook.</h2>
                 </div>
                 <div class="credential-container">
                     <div class="login-container">
                         <div class="form-container">
                             <form class="form">
-                                <div class="input-container">
-                                    <input>
-                                    <input>
+                                <div>
+                                    <div class="input-container">
+                                    <input type="email" placeholder="Email or phone number">
+                                    </div>
+                                    <div class="input-container">
+                                    <input type="password" placeholder="Password">
+                                    </div>
                                 </div>
                                 <div class="button-container">
-                                    <button></button>
+                                    <button class="button">Log In</button>
                                 </div>
                                 <div><a>Forgotten Password</a></div>
                                 <div><a>Create new Account</a></div>
