--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
                     <div class="login-container">
                         <div class="form-container">
                             <form class="form">
-                                <div>
+                                <div class="input-wrapper">
                                     <div class="input-container">
-                                    <input type="email" placeholder="Email or phone number">
+                                    <input type="email" placeholder="Email address or phone number">
                                     </div>
                                     <div class="input-container">
                                     <input type="password" placeholder="Password">
                                     </div>
                                 </div>
                                 <div class="button-container">
-                                    <button class="button">Log In</button>
+                                    <button class="button">Log in</button>
                                 </div>
-                                <div><a>Forgotten Password</a></div>
-                                <div><a>Create new Account</a></div>
+                                <div class="forgot-password-container">
+                                    <a class="forgot-password" href="">Forgotten password?</a>
+                                </div>
+                                <div class="line"></div>
+                                <div class="create-account-container">
+                                    <a role="button" href="#" class="create-account">Create new account</a>
+                                </div>
                             </form>
                         </div>
-                        <div>
-                            <a>Create a Page</a> for a celebrity, brand or business.
+                        <div class="create-page-container">
+                            <a class="create-page">Create a Page</a> for a celebrity, brand or business.
                         </div>    
                     </div>
                 </div>
